Conf and makefile

--- a/src/mod/endpoints/mod_aes67/Makefile.am
+++ b/src/mod/endpoints/mod_aes67/Makefile.am
@@ -1,15 +1,15 @@
 include $(top_srcdir)/build/modmake.rulesam
-MODNAME=mod_gstreamer
+MODNAME=mod_aes67
 
 if HAVE_GST
-mod_LTLIBRARIES = mod_gstreamer.la
-mod_gstreamer_la_SOURCES = mod_gstreamer.c gstreamer_api.c
-mod_gstreamer_la_CFLAGS = $(AM_CFLAGS)
-mod_gstreamer_la_CPPFLAGS = -I. $(GST_CFLAGS) $(AM_CPPFLAGS)
-mod_gstreamer_la_LIBADD = $(GST_LIBS) $(switch_builddir)/libfreeswitch.la
-mod_gstreamer_la_LDFLAGS = -avoid-version -module -no-undefined -shared
+mod_LTLIBRARIES = mod_aes67.la
+aes67_la_SOURCES = mod_aes67.c aes67_api.c
+aes67_la_CFLAGS = $(AM_CFLAGS)
+aes67_la_CPPFLAGS = -I. $(GST_CFLAGS) $(AM_CPPFLAGS)
+aes67_la_LIBADD = $(GST_LIBS) $(switch_builddir)/libfreeswitch.la
+aes67_la_LDFLAGS = -avoid-version -module -no-undefined -shared
 if ISMAC
-#mod_gstreamer_la_LDFLAGS += 
+#mod_aes67_la_LDFLAGS += 
 endif
 else
 install: error
