--- a/SIPServer/SIPServerEmbedded.csproj
+++ b/SIPServer/SIPServerEmbedded.csproj
@@ -14,8 +14,9 @@
     <OutputPath>C:\Development\SIPServerFromGIT\x64\debug</OutputPath>
     <BaseOutputPath>C:\Development\SIPServerFromGIT\x64\debug</BaseOutputPath>
     <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
+    <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
-
+      
   <ItemGroup>
     <ProjectReference Include="..\src\mod\languages\mod_managed\managed\FreeSWITCH.Managed.2017.csproj" />
     <ProjectReference Include="..\src\mod\languages\mod_managed\mod_managed.2017.vcxproj" />
