--- a/.gitignore
+++ b/.gitignore
@@ -173,6 +173,8 @@ src/mod/modules.inc
 
 BuildLog.htm
 
+!x64/conf
+
 !/libs/win32/
 !/libs/speex/win32/
 !/src/mod/endpoints/mod_gsmopen/gsmlib/gsmlib-1.10-patched-13ubuntu/win32/
