Local path adaptations updated with local master
- tee changes from master
- path changes local

--- a/src/mod/applications/mod_conference/mod_conference.2017.vcxproj
+++ b/src/mod/applications/mod_conference/mod_conference.2017.vcxproj
@@ -147,6 +147,7 @@
       <DataExecutionPrevention>
       </DataExecutionPrevention>
       <TargetMachine>MachineX64</TargetMachine>
+      <AdditionalLibraryDirectories>%(RootDir)\Development\sentry-native\Release\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
