--- a/SIPServer/SIPServerEmbedded.csproj
+++ b/SIPServer/SIPServerEmbedded.csproj
@@ -11,8 +11,8 @@
     <AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
     <BuiltInComInteropSupport>true</BuiltInComInteropSupport>
 
-    <OutputPath>C:\Development\SIPServerFromGIT\x64\debug</OutputPath>
-    <BaseOutputPath>C:\Development\SIPServerFromGIT\x64\debug</BaseOutputPath>
+    <OutputPath>C:\Development\GitHub\SIPServer\x64\debug</OutputPath>
+    <BaseOutputPath>C:\Development\GitHub\SIPServer\x64\debug</BaseOutputPath>
     <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
     <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
