--- a/libs/win32/portaudio/portaudio.2017.vcxproj
+++ b/libs/win32/portaudio/portaudio.2017.vcxproj
@@ -127,6 +127,9 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <IncludePath>..\..\..\libs\portaudio\src\os\win;..\..\..\libs\portaudio\include;$(IncludePath)</IncludePath>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug DirectSound|x64'">
+    <IncludePath>..\..\..\libs\portaudio\src\os\win;..\..\..\libs\portaudio\include;$(IncludePath)</IncludePath>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <Midl>
       <PreprocessorDefinitions>NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
