--- a/SIPServer/SIPServerEmbedded.csproj
+++ b/SIPServer/SIPServerEmbedded.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net8.0-windows</TargetFramework>
+    <TargetFramework>net8.0-windows10.0.22621.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <PublishAot>true</PublishAot>
@@ -11,15 +11,28 @@
     <AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
     <BuiltInComInteropSupport>true</BuiltInComInteropSupport>
 
-    <OutputPath>C:\Development\SIPServerFromGIT\x64\debug</OutputPath>
-    <BaseOutputPath>C:\Development\SIPServerFromGIT\x64\debug</BaseOutputPath>
+    <OutputPath>C:\Development\GitHub\NetworkAudio\SIPServer\x64\Debug</OutputPath>
+    <BaseOutputPath>C:\Development\GitHub\NetworkAudio\SIPServer\x64\Debug</BaseOutputPath>
     <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
     <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
-      
+
+	
   <ItemGroup>
-    <ProjectReference Include="..\src\mod\languages\mod_managed\managed\FreeSWITCH.Managed.2017.csproj" />
-    <ProjectReference Include="..\src\mod\languages\mod_managed\mod_managed.2017.vcxproj" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="5.0.1" />
+    <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
+    <PackageReference Include="Serilog.Sinks.SyslogMessages" Version="3.0.1" />
+    <PackageReference Include="System.Threading.RateLimiting" Version="8.0.0" />
+  </ItemGroup>
+
+	
+  <ItemGroup>
+    <ProjectReference Include="..\src\mod\languages\mod_managed\managed\FreeSWITCH.Managed.2017.csproj">
+      <Private>True</Private>
+    </ProjectReference>
+    <ProjectReference Include="..\src\mod\languages\mod_managed\mod_managed.2017.vcxproj">
+      <Private>True</Private>
+    </ProjectReference>
   </ItemGroup>
 
 </Project>
