--- a/src/mod/languages/mod_managed/mod_managed.2017.vcxproj
+++ b/src/mod/languages/mod_managed/mod_managed.2017.vcxproj
@@ -39,6 +39,7 @@
     <RootNamespace>mod_managed</RootNamespace>
     <Keyword>Win32Proj</Keyword>
     <ProjectName>mod_managed</ProjectName>
+    <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release_Mono|Win32'" Label="Configuration">
@@ -147,6 +148,9 @@
     <OutDir Condition="'$(Configuration)|$(Platform)'=='Release_CLR|Win32'">$(SolutionDir)$(PlatformName)\Release\mod\</OutDir>
     <OutDir Condition="'$(Configuration)|$(Platform)'=='Release_CLR|x64'">$(SolutionDir)$(PlatformName)\Release\mod\</OutDir>
     <OutDir Condition="'$(Configuration)|$(Platform)'=='Debug_CLR|x64'">$(SolutionDir)$(PlatformName)\Debug\mod\</OutDir>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug_CLR|x64'">
+    <TargetName>$(ProjectName)</TargetName>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug_CLR|Win32'">
     <ClCompile>
