--- a/src/mod/formats/mod_portaudio_stream/mod_portaudio_stream.2017.vcxproj
+++ b/src/mod/formats/mod_portaudio_stream/mod_portaudio_stream.2017.vcxproj
@@ -71,6 +71,9 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <IncludePath>..\..\..\..\libs\portaudio\include;..\..\endpoints\mod_portaudio\;$(IncludePath)</IncludePath>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <IncludePath>..\..\endpoints\mod_portaudio;..\..\..\..\libs\portaudio\include;..\mod_portaudio_stream;$(IncludePath)</IncludePath>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <PrecompiledHeader>
