--- a/SIPServer/SIPServerEmbedded.csproj
+++ b/SIPServer/SIPServerEmbedded.csproj
@@ -11,8 +11,8 @@
     <AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
     <BuiltInComInteropSupport>true</BuiltInComInteropSupport>
 
-    <OutputPath>C:\Development\GitHub\NetworkAudio\SIPServer\x64\Debug</OutputPath>
-    <BaseOutputPath>C:\Development\GitHub\NetworkAudio\SIPServer\x64\Debug</BaseOutputPath>
+    <OutputPath>C:\Users\suppo\OneDrive\Documents\GitHub\SIPServer\x64\Release</OutputPath>
+    <BaseOutputPath>C:\Users\suppo\OneDrive\Documents\GitHub\SIPServer\x64\Release</BaseOutputPath>
     <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
     <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
