mod_aes67: add copyright and rearrange code
add instruction on how to download and install npcap SDK and library.

--- a/src/mod/endpoints/mod_aes67/mod_aes67.vcxproj
+++ b/src/mod/endpoints/mod_aes67/mod_aes67.vcxproj
@@ -188,6 +188,7 @@
     <ClCompile Include="aes67_api.c" />
     <ClCompile Include="mod_aes67.c" />
     <ClCompile Include="pcap_wrap.c" />
+    <ClCompile Include="ptp.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="aes67_api.h"/>
