--- a/src/mod/languages/mod_managed/mod_managed.2017.vcxproj
+++ b/src/mod/languages/mod_managed/mod_managed.2017.vcxproj
@@ -335,6 +335,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="freeswitch.i" />
+    <None Include="packages.config" />
     <None Include="switch_platform.i" />
   </ItemGroup>
   <ItemGroup>
@@ -348,5 +349,12 @@
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
+    <Import Project="..\..\..\..\packages\x64sentry-native.0.6.1\build\x64sentry-native.targets" Condition="Exists('..\..\..\..\packages\x64sentry-native.0.6.1\build\x64sentry-native.targets')" />
   </ImportGroup>
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\..\..\..\packages\x64sentry-native.0.6.1\build\x64sentry-native.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\..\..\packages\x64sentry-native.0.6.1\build\x64sentry-native.targets'))" />
+  </Target>
 </Project>
