--- a/Backup/SIPServer/Engine.csproj
+++ b/Backup/SIPServer/Engine.csproj
@@ -1,4 +1,5 @@
-﻿<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="15.0">
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0-windows10.0.22621.0</TargetFramework>
@@ -9,6 +10,7 @@
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
     <BuiltInComInteropSupport>true</BuiltInComInteropSupport>
+
     <OutputPath>C:\Users\suppo\OneDrive\Documents\GitHub\SIPServer\x64\Release</OutputPath>
     <BaseOutputPath>C:\Users\suppo\OneDrive\Documents\GitHub\SIPServer\x64\Release</BaseOutputPath>
     <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
@@ -16,16 +18,17 @@
     <Title>MAS SIP Server Launcher</Title>
     <Product>Engine</Product>
     <Copyright>2024 Clear-Com LLC</Copyright>
-    <FileUpgradeFlags>40</FileUpgradeFlags>
-    <UpgradeBackupLocation>C:\Development\GitHub\NAUDSIPServer\SIPServer-master\Backup\SIPServer\</UpgradeBackupLocation>
-    <OldToolsVersion>2.0</OldToolsVersion>
   </PropertyGroup>
+
+	
   <ItemGroup>
     <PackageReference Include="Serilog.Sinks.Console" Version="5.0.1" />
     <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
     <PackageReference Include="Serilog.Sinks.SyslogMessages" Version="3.0.1" />
     <PackageReference Include="System.Threading.RateLimiting" Version="8.0.0" />
   </ItemGroup>
+
+	
   <ItemGroup>
     <ProjectReference Include="..\src\mod\languages\mod_managed\managed\FreeSWITCH.Managed.2017.csproj">
       <Private>True</Private>
@@ -34,4 +37,5 @@
       <Private>True</Private>
     </ProjectReference>
   </ItemGroup>
+
 </Project>
