--- a/.gitignore
+++ b/.gitignore
@@ -178,9 +178,9 @@ BuildLog.htm
 !/src/mod/endpoints/mod_gsmopen/gsmlib/gsmlib-1.10-patched-13ubuntu/win32/
 *.suo
 *.sdf
-x64/*
+/x64/*
 ipch/
-
+/x64/Release/*
 
 !/x64/Release/conf/
 !/x64/Release/mod/managed/
