--- a/.gitignore
+++ b/.gitignore
@@ -180,9 +180,10 @@ BuildLog.htm
 *.sdf
 /x64/*
 ipch/
-/x64/Release/*
 
-!/x64/Release/conf/
+/x64/Release/conf/*
+!*.xml
+/x64/Release/mod/managed/*
 !/x64/Release/mod/managed/
 !*.csx
 
