--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+/x64/Release/conf/*
+!*.xml
+!/x64/Release/mod/managed/*.csx
+!*.csx
 *~
 *.o
 *.so
@@ -181,11 +185,7 @@ BuildLog.htm
 /x64/*
 ipch/
 
-/x64/Release/conf/*
-!*.xml
-/x64/Release/mod/managed/*
-!/x64/Release/mod/managed/
-!*.csx
+
 
 
 /libs/xmlrpc-c/tools/xml-rpc-api2txt
